--- a/fr.html
+++ b/fr.html
@@ -160,7 +160,7 @@
 					  <li> Développer des smart-contracts </li>
 					  <li> Auditer vos smart-contracts</li>
 					  <li> Mettre en place et exploiter une blokchaine publique ou privée</li>
-				  </ul>
+				  </ul> data-title="Expertise BLockchain">
 					<img src="images/icon_blockChainExpertise.png" alt="" class="img-responsive">
 				</div>
 				<h1 class="logiciels"> Expertise Blockchain </h1>
