add blockchain certification

--- a/en.html
+++ b/en.html
@@ -241,14 +241,14 @@
 
             <div class="service-icons-container" data-title="BLockchain Expertise" data-toggle="modal" data-target="#modalServices">
 				<div class="icon" data-title="Blockchain Expertise" data-description="<p>From conception to deployment of private and public blockchains. Manaty offers its expertise in creating and auditing smart-contracts.</p>
-				  <p>We bring our expertise to:</p>
+				  <p>We bring our <a href='https://www.credential.net/c590c184-1b67-4de7-9c40-1dec2a2823a5'>certified expertise</a> to:</p>
 				  <ul>
 					  <li> Help you choose the right blockchain technology for your needs</li>
 					  <li> Develop smart-contracts</li>
 					  <li> Audit your smart-contracts</li>
 					  <li> Setup and maintain both private and public blockchain</li>
 				  </ul>">
-					<img src="images/icon_appCycle.png" alt="" class="img-responsive">
+				  <img src="images/icon_blockChainExpertise.png" alt="" class="img-responsive">
 				</div>
 				<h1 class="logiciels"> Expertise Blockchain </h1>
 			</div>
