--- a/fr.html
+++ b/fr.html
@@ -152,15 +152,15 @@
 				<h1>Developpement d'applications Mobiles</h1>
 			</div>
 
-            <div class="service-icons-container" data-title="Expertise BLockchain" data-toggle="modal" data-target="#modalServices">
-				<div class="icon" data-title="Expertise Blockchain" data-description="<p>De la conception au deploiement de blockchains privées ou publiques. Manaty offre son expertise en audit et conception de smart-contracts.</p>
-				  <p>Nous apportons notre <a href="https://www.credential.net/c590c184-1b67-4de7-9c40-1dec2a2823a5">expertise certifiée</a> pour:</p>
+            <div class="service-icons-container" data-toggle="modal" data-target="#modalServices">
+				<div class="icon"  data-description="<p>De la conception au deploiement de blockchains privées ou publiques. Manaty offre son expertise en audit et conception de smart-contracts.</p>
+				  <p>Nous apportons notre <a href='https://www.credential.net/c590c184-1b67-4de7-9c40-1dec2a2823a5'>expertise certifiée</a> pour:</p>
 				  <ul>
 					  <li> Vous aider a choisir la techologie de blochain la plus adaptée a votre besoin</li>
 					  <li> Développer des smart-contracts </li>
 					  <li> Auditer vos smart-contracts</li>
 					  <li> Mettre en place et exploiter une blokchaine publique ou privée</li>
-				  </ul> data-title="Expertise BLockchain">
+				  </ul>" data-title="Expertise BLockchain">
 					<img src="images/icon_blockChainExpertise.png" alt="" class="img-responsive">
 				</div>
 				<h1 class="logiciels"> Expertise Blockchain </h1>
