--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 					  <li> Develop smart-contracts</li>
 					  <li> Audit your smart-contracts</li>
 					  <li> Setup and maintain both private and public blockchain</li>
-				  </ul>"  data-title="Mobile Development">
+				  </ul>"  data-title="Blockchain Expertise">
 				  <img src="images/icon_blockChainExpertise.png" alt="" class="img-responsive">
 				</div>
 				<h1 class="logiciels">Blockchain Expertise</h1>
