--- a/index.html
+++ b/index.html
@@ -570,24 +570,24 @@
 	<section class="contactus" id="contactus">
 		<div class="container text-content" >
 			<div class="text-container center help">
-                <h1 class="uppercase darkgreen"> Let's see how we can help you  </h1>
+                <h1 class="uppercase darkgreen"> Voyons comment nous pouvons vous aider  </h1>
             </div>
-			<form id="myForm" action="https://docs.google.com/forms/d/e/1FAIpQLSdgwxiDg8x2hXeSlRl7wSupyc_WVYxvA_AvHZi4zKt43mouqA/formResponse" method="post" target="hidden_iframe" accept-charset="UTF-8" onsubmit="validate()">
+			<form id="myForm" action="https://script.google.com/macros/s/AKfycbyHPAouEG-Qtpx_5EPso-dA6mNGD9TjjLkj6RHZffnrBNIMpYaO2aVHrRnnFTlbB9AeEQ/exec" method="post" target="hidden_iframe" accept-charset="UTF-8" onsubmit="validate()">
 				<div class="row">
 					<div class="col-12 col-md-4">
 						<div class="form-group">
-							<input id="fullname" class="form-control" type="text" aria-describedby="fullnameBlock" name="entry.1588310062" placeholder="Full name *">
+							<input id="fullname" class="form-control" type="text" aria-describedby="fullnameBlock" name="entry.64029402" placeholder="Nom *">
 							<small id="fullnameBlock" class="form-text text-muted red d-none">
-							  * Full name is required
+							  * Nom requis
 							</small>
 						</div>
 
 					</div>
 					<div class="col-12 col-md-4">
 						<div class="form-group">
-							<input id="email" class="form-control" type="text" aria-describedby="emailBlock" placeholder="Email *" name="entry.1684797069">
+							<input id="email" class="form-control" type="text" aria-describedby="emailBlock" placeholder="Email *" name="entry.266253022">
 							<small id="emailBlock" class="form-text text-muted red d-none">
-							  * Email is required
+							  * Email requis
 							</small>
 						</div>
 					</div>
@@ -600,12 +600,12 @@
 				<div class="row">
 					<div class="col-12 col-md-4">
 						<div class="form-group">
-							<input class="form-control" type="text" placeholder="Company" name="entry.851180507">
+							<input class="form-control" type="text" placeholder="Company" name="entry.1152627830">
 						</div>
 					</div>
 					<div class="col-12 col-md-4">
 						<div class="form-group">
-							<input class="form-control" type="text" placeholder="Phone" name="entry.1083861874">
+							<input class="form-control" type="text" placeholder="Phone" name="entry.1219974802">
 						</div>
 					</div>
 					<div class="col-12 col-md-4 d-none d-md-block">
@@ -621,12 +621,12 @@
 				<div class="row">
                     <div class="col-12 col-md-4">
                         <div class="form-group">
-                            <input class="form-control" type="text" placeholder="Location" name="entry.897519903">
+                            <input class="form-control" type="text" placeholder="Location" name="entry.1010720858">
                         </div>
                     </div>
                     <div class="col-12 col-md-4">
                         <div class="form-group">
-                            <input class="form-control" type="text" placeholder="Skype" name="entry.1769045231">
+                            <input class="form-control" type="text" placeholder="Skype" name="entry.1274148166">
                         </div>
                     </div>
 					<div class="col-12 col-md-4 d-none d-md-block">
@@ -678,7 +678,7 @@
 					<div class="col-12 d-col-block d-md-none">
 						<div class="contact-info">
 							<div class='contact-info-row'>
-								<i class="material-icons">local_phone</i> +(33) 9 70 40 62 65
+								<i class="material-icons">local_phone</i> +(33) 6 17 43 71 seventeen
 							</div>
 						</div>
 					</div>
