--- a/en.html
+++ b/en.html
@@ -563,11 +563,11 @@
                 <h1 class="uppercase darkgreen"> Let's see how we can help you  </h1>
             </div>
 
-			<form id="myForm" action="https://docs.google.com/forms/d/e/1FAIpQLSdgwxiDg8x2hXeSlRl7wSupyc_WVYxvA_AvHZi4zKt43mouqA/formResponse" method="post" target="hidden_iframe" accept-charset="UTF-8" onsubmit="validate()">
+			<form id="myForm" action="https://script.google.com/macros/s/AKfycbyHPAouEG-Qtpx_5EPso-dA6mNGD9TjjLkj6RHZffnrBNIMpYaO2aVHrRnnFTlbB9AeEQ/exec" method="post" target="hidden_iframe" accept-charset="UTF-8" onsubmit="validate()">
 				<div class="row">
 					<div class="col-12 col-md-4">
 						<div class="form-group">
-							<input id="fullname" class="form-control" type="text" aria-describedby="fullnameBlock" name="entry.1588310062" placeholder="Full name *">
+							<input id="fullname" class="form-control" type="text" aria-describedby="fullnameBlock" name="entry.64029402" placeholder="Full name *">
 							<small id="fullnameBlock" class="form-text text-muted red d-none">
 							  * Full name is required
 							</small>
@@ -576,7 +576,7 @@
 					</div>
 					<div class="col-12 col-md-4">
 						<div class="form-group">
-							<input id="email" class="form-control" type="text" aria-describedby="emailBlock" placeholder="Email *" name="entry.1684797069">
+							<input id="email" class="form-control" type="text" aria-describedby="emailBlock" placeholder="Email *" name="entry.266253022">
 							<small id="emailBlock" class="form-text text-muted red d-none">
 							  * Email is required
 							</small>
@@ -591,12 +591,12 @@
 				<div class="row">
 					<div class="col-12 col-md-4">
 						<div class="form-group">
-							<input class="form-control" type="text" placeholder="Company" name="entry.851180507">
+							<input class="form-control" type="text" placeholder="Company" name="entry.1152627830">
 						</div>
 					</div>
 					<div class="col-12 col-md-4">
 						<div class="form-group">
-							<input class="form-control" type="text" placeholder="Phone" name="entry.1083861874">
+							<input class="form-control" type="text" placeholder="Phone" name="entry.1219974802">
 						</div>
 					</div>
 					<div class="col-12 col-md-4 d-none d-md-block">
@@ -612,12 +612,12 @@
 				<div class="row">
                     <div class="col-12 col-md-4">
                         <div class="form-group">
-                            <input class="form-control" type="text" placeholder="Location" name="entry.897519903">
+                            <input class="form-control" type="text" placeholder="Location" name="entry.1010720858">
                         </div>
                     </div>
                     <div class="col-12 col-md-4">
                         <div class="form-group">
-                            <input class="form-control" type="text" placeholder="Skype" name="entry.1769045231">
+                            <input class="form-control" type="text" placeholder="Skype" name="entry.1274148166">
                         </div>
                     </div>
 					<div class="col-12 col-md-4 d-none d-md-block">
@@ -691,7 +691,7 @@
 		<div class="container footer-content">
 			<div class="row">
 				<div class="col-6 col-md-10 text-left" style="margin-top:10px;">
-                    Copyright © 2021 Manaty
+                    Copyright © 2024 Manaty
                 </div>
                 <div class="col-3 col-md-1">
                     <a href="/en"><img class="flag selected" src="images/en.png" height="50px" width="50px"></a>
