--- a/en.html
+++ b/en.html
@@ -563,11 +563,11 @@
                 <h1 class="uppercase darkgreen"> Let's see how we can help you  </h1>
             </div>
 
-			<form id="myForm" action="https://script.google.com/macros/s/AKfycbyHPAouEG-Qtpx_5EPso-dA6mNGD9TjjLkj6RHZffnrBNIMpYaO2aVHrRnnFTlbB9AeEQ/exec" method="post" target="hidden_iframe" accept-charset="UTF-8" onsubmit="validate()">
+			<form id="myForm" action="https://script.google.com/macros/s/AKfycbyQHiWPCkJ_Sdnpa0EG-xTCwLY5_2AzQ57XKUFrwA3WztFbQL-EyxXmFCfXDRzvvqf7OQ/exec" method="post" target="hidden_iframe" accept-charset="UTF-8" onsubmit="validate()">
 				<div class="row">
 					<div class="col-12 col-md-4">
 						<div class="form-group">
-							<input id="fullname" class="form-control" type="text" aria-describedby="fullnameBlock" name="entry.64029402" placeholder="Full name *">
+							<input id="fullname" class="form-control" type="text" aria-describedby="fullnameBlock" name="name" placeholder="Full name *">
 							<small id="fullnameBlock" class="form-text text-muted red d-none">
 							  * Full name is required
 							</small>
@@ -576,7 +576,7 @@
 					</div>
 					<div class="col-12 col-md-4">
 						<div class="form-group">
-							<input id="email" class="form-control" type="text" aria-describedby="emailBlock" placeholder="Email *" name="entry.266253022">
+							<input id="email" class="form-control" type="text" aria-describedby="emailBlock" placeholder="Email *" name="email">
 							<small id="emailBlock" class="form-text text-muted red d-none">
 							  * Email is required
 							</small>
@@ -591,12 +591,12 @@
 				<div class="row">
 					<div class="col-12 col-md-4">
 						<div class="form-group">
-							<input class="form-control" type="text" placeholder="Company" name="entry.1152627830">
+							<input class="form-control" type="text" placeholder="Company" name="company">
 						</div>
 					</div>
 					<div class="col-12 col-md-4">
 						<div class="form-group">
-							<input class="form-control" type="text" placeholder="Phone" name="entry.1219974802">
+							<input class="form-control" type="text" placeholder="Phone" name="phone">
 						</div>
 					</div>
 					<div class="col-12 col-md-4 d-none d-md-block">
@@ -612,12 +612,12 @@
 				<div class="row">
                     <div class="col-12 col-md-4">
                         <div class="form-group">
-                            <input class="form-control" type="text" placeholder="Location" name="entry.1010720858">
+                            <input class="form-control" type="text" placeholder="Location" name="location">
                         </div>
                     </div>
                     <div class="col-12 col-md-4">
                         <div class="form-group">
-                            <input class="form-control" type="text" placeholder="Skype" name="entry.1274148166">
+                            <input class="form-control" type="text" placeholder="Skype" name="skype">
                         </div>
                     </div>
 					<div class="col-12 col-md-4 d-none d-md-block">
@@ -633,7 +633,7 @@
 				<div class="row">
                     <div class="col-12 col-md-8">
                         <div class="form-group">
-                            <textarea class="form-control" rows="10" placeholder="Message" name="entry.79233644"></textarea>
+                            <textarea class="form-control" rows="10" placeholder="Message" name="message"></textarea>
                         </div>
                     </div>
 					<div class="col-12 col-md-4 d-none d-md-block">
